# lego_dimensions_protocol

./: adafuzz.py  blinkenlights proof of concept.py  blinkenlights.py  fuzz_blinkenlights.py  fuzz_nfc.py  known_commands.py  lego_dimensions_gateway.py  morse.py  parse_log.py  pyproject.toml  pyusb_tutorial.py  readme.md  split_log.py  tagtracker.py
checksum/: generate_checksum.py  test_identical_commands.py
docs/: codex_feature_improvement_tasks.json  light_show_track_format.md  platform-setup.md  troubleshooting.md
scripts/: export_character_catalog.py  generate_demo_lstf_tracks.py
src/lego_dimensions_protocol/: __init__.py  capture.py  character_cli.py  characters.py  crypto.py  demo.py  doctor.py  editor.py  gateway.py  gtkstudio.py  lstf.py  lstf_app.py  lstf_player.py  morse.py  pad_app.py  presets.py  record_cli.py  rfid.py  rfid_demo.py  rfid_read.py  session.py  studio.py  viewer.py
tests/: conftest.py  test_capture.py  test_character_catalog.py  test_character_cli.py  test_crypto.py  test_demo_lstf_tracks.py  test_doctor.py  test_editor.py  test_gateway_resilience.py  test_gateway_timeout_detection.py  test_lstf_app.py  test_lstf_parser.py  test_lstf_tracks_repo.py  test_pad_app.py  test_pad_app_cli.py  test_presets.py  test_rfid_character_lookup.py  test_rfid_timeout_handling.py  test_session.py  test_studio.py  test_viewer.py
tracks/: README.md  aurora_glide.lstf  centre_stage.lstf  countdown_burst.lstf  fireworks_finale.lstf  ocean_swell.lstf  rainbow_cycle.lstf  strobe_warning.lstf  sync_pulse.lstf  tempo_ramp.lstf  triple_chase.lstf  twinkle_field.lstf  wave_cascade.lstf
